package com.gorlov;

import java.util.Date;

public class JsonData {

    public Integer hp;
    public Integer hunger;
    public Integer sleep;
    public Date lastSave;
    public String name;
    public Boolean dog;

}
